--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
         <ul class="gap-5 text-gray-600 hidden md:flex">
             <li>
-                <a href="#" class="hover:underline hover:text-black"> Home</a>
+                <a href="index.html" class="hover:underline hover:text-black"> Home</a>
             </li>
             <li>
                 <a href="product.html" class="hover:underline hover:text-black">Product</a>
@@ -30,6 +30,23 @@
             </li>
         </ul>
     </nav>
+
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%;height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="close-nav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 text-gray-600 items-center">
+            <li>
+                <a href="index.html" class="hover:underline hover:text-black"> Home</a>
+            </li>
+            <li>
+                <a href="product.html" class="hover:underline hover:text-black">Product</a>
+            </li>
+            <li>
+                <a href="contact.html" class="hover:underline hover:text-black">Contact</a>
+            </li>
+        </ul>
+    </section>
 
     <section class="bg-green-100 p-4 md:p-10 flex justify-center">
         <div>
@@ -107,21 +124,21 @@
             <div>
                 <img src="./images/bestseller_2.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>New pet Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_3.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Lilly Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_4.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Hibiscus Plant</h1>
                 <p>$20</p>
             </div>
         </div>
@@ -164,6 +181,8 @@
         <p>The Standard chunk of lorem ipsum used since the1500s is reprodused below for those interest</p>
         <p>@2021 Greenday.com</p>
     </section>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
