--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -31,12 +31,29 @@
         </ul>
     </nav>
 
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%;height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="close-nav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 text-gray-600 items-center">
+            <li>
+                <a href="index.html" class="hover:underline hover:text-black"> Home</a>
+            </li>
+            <li>
+                <a href="product.html" class="hover:underline hover:text-black">Product</a>
+            </li>
+            <li>
+                <a href="contact.html" class="hover:underline hover:text-black">Contact</a>
+            </li>
+        </ul>
+    </section>
+
     <section class="p-4 text-center">
         <h1 class="font-bold mt-5 text-3xl">Our Products</h1>
-        <input type="text" class="border border-black p-2 m-3" style="width: 80%;"
+        <input id="search" type="text" class="border border-black p-2 m-3" style="width: 80%;"
             placeholder="Search for a product...">
 
-        <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
+        <div id="product-container" class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
             <div>
                 <img src="./images/bestseller_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
@@ -47,42 +64,42 @@
             <div>
                 <img src="./images/bestseller_2.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>New pet Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_3.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Lilly Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_4.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Hibiscus Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_2.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>New pet Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_4.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Hibiscus Plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
                 <img src="./images/bestseller_3.png" class="inline hover:shadow-xl transform hover:-translate-y-2"
                     alt="">
-                <h1>Rose Plant</h1>
+                <h1>Lilly Plant</h1>
                 <p>$20</p>
             </div>
 
@@ -102,6 +119,7 @@
         <p>@2021 Greenday.com</p>
     </section>
 
+    <script src="product.js"></script>
 </body>
 
 </html>
